Fix screen reader and contrast accessibility issues in cds-ui
- make sure that all font-icons are `aria-hidden`="true" and have
  an alternative label that conveys the same semantic meaning than the icon
- fix contrast issues

Issue-ID: CCSDK-4188

--- a/cds-ui/client/src/app/feature-modules/blueprint/select-template/search-template/search-template.component.scss
+++ b/cds-ui/client/src/app/feature-modules/blueprint/select-template/search-template/search-template.component.scss
@@ -31,11 +31,11 @@ limitations under the License.
 }
 
 .mat-upload-btn-disabled {
-    background-color: #c5cae8;
+    background-color: #9fa8da;
     margin-top: 10px;
     border-radius: 4px;
     margin-bottom: 5px;
-    color: darkgray;
+    color: #616161;
     min-width: 6em;
     border: none;
     cursor: initial;
