--- a/cds-ui/client/src/styles.scss
+++ b/cds-ui/client/src/styles.scss
@@ -37,9 +37,9 @@ limitations under the License.
 }
 
 .btn-disablled {
-    background-color: #c5cae8;
+    background-color: #9fa8da;
     border-radius: 4px;
-    color: darkgray;
+    color: #616161;
     margin: 0.5em;
     padding: 0.5em;
     min-width: 6em;
@@ -61,7 +61,7 @@ background-color:#3f51b5;
 }
 div.jsoneditor-tree div.jsoneditor-tree-inner{
     padding-bottom: 300px;
-    background-color: white;     
+    background-color: white;
 }
 div.jsoneditor-treepath {
     padding: 0 5px;
